# mangabot

./: README.md  cabal.project  hie.yaml  mangabot.cabal
app/: Main.hs
src/: MangaBot.hs
src/MangaBot/: Logging.hs  Mangadex.hs  Orphans.hs  Reddit.hs
test/: MangaBotSpec.hs
